--- a/styles.css
+++ b/styles.css
@@ -31,12 +31,20 @@ header {
 	text-align: center;
 }
 
-.gamePlay {
+.gameplay {
 	margin-bottom: 15px;
+}
 
+.hidden{
+	display: none;
 }
 
 .results {
 	font-family: arial;
 	font-weight: lighter;
+}
+
+
+.playerselection {
+	/*display: hidden;*/
 }
