Done. Will do some styles improvements in the future. =)

--- a/styles.css
+++ b/styles.css
@@ -33,10 +33,12 @@ header {
 
 .gameplay {
 	margin-bottom: 15px;
+	font-family: arial;
 }
 
-.hidden{
+.hidden {
 	display: none;
+	/*margin-top: 250px;*/
 }
 
 .results {
