font styling. btns fixing text position.

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: "Archistico";
+    src: url("fonts/Archistico_Simple.ttf");
+}
+
 html {
     box-sizing: border-box;
     margin: 0;
@@ -18,18 +23,16 @@ html {
     border-radius: 10%;
     display: grid;
     grid-template-areas:
-        /* " . ..... ..... ..... ..... ..... ." */
         " title title title title title "
-        " pl-sc . sc-divisor . en-sc "
-        " pl-sc . .......... .  en-sc "
+        " pl-sc pl-sc sc-divisor en-sc en-sc "
+        " pl-sc pl-sc .......... en-sc en-sc "
         " . bt-dis bt-dis bt-dis . "
         " . rock-btn paper-btn scissors-btn . "
         " round-btn . new-btn . rules-btn ";
-    /* " . ......... . ....... . ......... ."; */
     grid-template-columns: repeat(5, 1fr);
     grid-template-rows: 1fr 1fr 1fr 3fr 1fr 1fr;
     gap: 10px;
-    max-height: 600px;
+    max-height: 500px;
     max-width: 600px;
     min-width: 500px;
     height: 75%;
@@ -43,17 +46,21 @@ html {
 
 .title {
     font-family: fantasy;
-    font-size: 1.4em;
-    font-weight: bold;
+    font-size: 2.5em;
+    /* font-weight: bold; */
     grid-area: title;
+    font-family: "Archistico";
+    border-bottom: 1px dotted rgba(0, 0, 0, 0.6);
+
 }
 
-.pl-nm {
-    grid-area: pl-nm;
-}
 
 .pl-sc {
     grid-area: pl-sc;
+    font-size: 2.5em;
+    align-self: center;
+    justify-self: center;
+    font-family: "Archistico";
 }
 
 .sc-divisor {
@@ -62,11 +69,13 @@ html {
 
 .en-sc {
     grid-area: en-sc;
+    font-size: 2.5em;
+    align-self: center;
+    font-family: "Archistico";
+
 }
 
-.en-nm {
-    grid-area: en-nm;
-}
+
 
 .pl-choice {
     grid-area: pl-choice;
@@ -82,6 +91,7 @@ html {
 
 .battle-display {
     border: 1px solid grey;
+    box-shadow: 1px 1px 1px grey;  
     font-family: "Helvetica", sans-serif;
     grid-area: bt-dis;
     justify-self: stretch;
@@ -127,14 +137,18 @@ html {
 }
 
 .btn {
+    align-self: center;
     border: 3px solid black;
     border-radius: 50%;
-    font-family: "Helvetica", sans-serif;
+    box-shadow: 2px 2px 2px black;
+    font-family: "Archistico";
+    font-weight: bold;
     justify-self: center;
-    align-self: center;
     height: 85px;
-    margin-top: 2px;
-    padding: 5px;
+    opacity: 0.8;
+    /* margin-top: 2px; */
+    padding-top: 30px;
+    text-align: center;
     width: 85px;
 
 }
