--- a/styles.css
+++ b/styles.css
@@ -19,39 +19,40 @@ html {
 
 .content {
     background-color: #EEE;
-    border: 5px solid black;
+    border: 5px solid rgba(0, 0, 0, 0.8);
+    box-shadow: 5px 5px 10px grey;
     border-radius: 10%;
     display: grid;
     grid-template-areas:
         " title title title title title "
         " pl-sc pl-sc sc-divisor en-sc en-sc "
-        " pl-sc pl-sc .......... en-sc en-sc "
-        " . bt-dis bt-dis bt-dis . "
+        " pl-sc pl-sc sc-divisor en-sc en-sc "
+        " ...... bt-dis bt-dis bt-dis ...... "
         " . rock-btn paper-btn scissors-btn . "
-        " round-btn . new-btn . rules-btn ";
+        " round-btn .. new-btn .. rules-btn ";
     grid-template-columns: repeat(5, 1fr);
     grid-template-rows: 1fr 1fr 1fr 3fr 1fr 1fr;
     gap: 10px;
     max-height: 500px;
     max-width: 600px;
-    min-width: 500px;
+    min-width: 570px;
     height: 75%;
     margin: 0 auto;
     width: 75%;
     justify-items: center;
     align-content: space-evenly;
+    opacity: 0.8;
     padding: 25px 15px;
 
 }
 
 .title {
-    font-family: fantasy;
+    border-bottom: 1px dotted rgba(0, 0, 0, 0.6);
+    font-family: "Archistico";
     font-size: 2.5em;
     /* font-weight: bold; */
     grid-area: title;
-    font-family: "Archistico";
-    border-bottom: 1px dotted rgba(0, 0, 0, 0.6);
-
+    text-align: center
 }
 
 
@@ -65,6 +66,7 @@ html {
 
 .sc-divisor {
     grid-area: sc-divisor;
+    margin-top: 25px;
 }
 
 .en-sc {
@@ -76,7 +78,6 @@ html {
 }
 
 
-
 .pl-choice {
     grid-area: pl-choice;
 }
@@ -85,13 +86,29 @@ html {
     grid-area: en-choice;
 }
 
-.bt-divisor {
-    grid-area: bt-divisor;
+.win-lose-ind {
+  height: 50%;
+  width: 40px;
 }
+
+.win-lose-right {
+    position: relative;
+    float: right;
+    background-color: red;
+}
+
+.win-lose-left {
+
+    position: relative;
+    float: left;
+    background-color: green;
+
+}
+
 
 .battle-display {
     border: 1px solid grey;
-    box-shadow: 1px 1px 1px grey;  
+    box-shadow: 1px 1px 1px grey;
     font-family: "Helvetica", sans-serif;
     grid-area: bt-dis;
     justify-self: stretch;
@@ -142,15 +159,31 @@ html {
     border-radius: 50%;
     box-shadow: 2px 2px 2px black;
     font-family: "Archistico";
+    font-size: 1em;
     font-weight: bold;
     justify-self: center;
     height: 85px;
     opacity: 0.8;
-    /* margin-top: 2px; */
     padding-top: 30px;
     text-align: center;
     width: 85px;
 
+}
+
+.btn:hover {
+    align-self: center;
+    border: 5px solid black;
+    border-radius: 50%;
+    box-shadow: 2px 2px 2px black;
+    font-family: "Archistico";
+    font-size: 1em;
+    font-weight: bold;
+    justify-self: center;
+    height: 85px;
+    opacity: 0.8;
+    padding-top: 28px;
+    text-align: center;
+    width: 85px;
 }
 
 
